<resources>
    <string name="cinema_question">Пойдешь в кино?</string>
    <string name="try_again">Попробовать снова</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="internal_error">Внутренняя ошибка</string>
    <string name="background_pattern">Background pattern</string>
    <string name="cinema_answer">Нет, я делаю Дерюшева</string>
    <string name="top_background_image_in_initial_setup">Top Background Image in Initial Setup</string>
    <string name="initial_setup">Предварительная настройка</string>
    <string name="initial_setup_explain">Ваш выбор повлияет на то, как будет выглядеть главный экран по умолчанию</string>
    <string name="student_image_button">Student Image Button</string>
    <string name="params_can_be_changed">Параметры можно будет изменить</string>
    <string name="options_button">Options Button</string>
    <string name="time">Время</string>
    <string name="timetable">Расписание</string>
    <string name="location_icon">Location Icon</string>
    <string name="no_lessons">Занятий нет</string>
    <string name="share_timetable_item">Поделиться информацией о занятии</string>
    <string name="filters">Фильтры</string>
    <string name="setup_display_params">Настройте параметры отображения</string>
    <string name="subgroup">Подгруппа</string>
    <string name="subgroup_a">А</string>
    <string name="subgroup_b">Б</string>
    <string name="subgroup_c">В</string>
    <string name="subgroup_d">Г</string>
    <string name="week">Неделя</string>
    <string name="close_icon">Close icon</string>
    <string name="сourse">Курс</string>
    <string name="group">Группа</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="group_1">Группа 1</string>
    <string name="group_2">Группа 2</string>
    <string name="group_3">Группа 3</string>
    <string name="group_4">Группа 4</string>
    <string name="group_5">Группа 5</string>
    <string name="group_6">Группа 6</string>
    <string name="group_7">Группа 7</string>
    <string name="group_8">Группа 8</string>
    <string name="group_9">Группа 9</string>
    <string name="group_10">Группа 10</string>
    <string name="group_11">Группа 11</string>
    <string name="group_vf">Военфак</string>
    <string name="course_1">Курс 1</string>
    <string name="course_2">Курс 2</string>
    <string name="course_3">Курс 3</string>
    <string name="course_4">Курс 4</string>
    <string name="swipe_top_settings">Потяните вверх для расширенных настроек</string>
    <string name="student_view">Режим студента</string>
    <string name="teacher_view">Режим преподавателя</string>
    <string name="displaying_subgroups">Отображаемые подгруппы</string>
    <string name="choose_teacher">Выберите преподавателя</string>
    <string name="start_typing">Начните писать</string>
    <string name="full_name">ФИО</string>
    <string name="no_teacher">Преподаватель не найден</string>
    <string name="course_template">Курс: %s</string>
    <string name="group_template">Группа: %s</string>
    <string name="student">Студент</string>
    <string name="teacher">Преподаватель</string>
    <string name="tap_title_filters">Ваши параметры для отображения занятий</string>
    <string name="tap_desc_filters">Важно: на данный момент по независящим от нас причинам режим преподавателя не гарантирует точность данных, поэтому рекомендуем использовать его с осторожностью</string>
    <string name="settings">Настройки</string>
    <string name="just_back_image">Just back image</string>
    <string name="list_animation">Анимация списка</string>
    <string name="helper_image">Helper image</string>
    <string name="contact_us">Связаться\n с разработчиком</string>
    <string name="telegram_icon">Telegram icon</string>
    <string name="common_questions">Частые вопросы</string>
    <string name="unavailable">Недоступно</string>
    <string name="student_mode">Режим студента</string>
    <string name="teacher_mode">Режим преподавателя</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Добавить виджет</string>
    <string name="app_widget_description">Виджет для просмотра расписания с сайта</string>
    <string name="mmf_widget">MMF Widget</string>
    <string name="green_mode">Green mode</string>
    <string name="white_mode">White mode</string>
    <string name="choose_time">Выберите время</string>
    <string name="ok">OK</string>
</resources>