<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_xs"
    tools:background="@color/white_base_front">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        style="@style/GuidelineMaterial.Start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        style="@style/GuidelineMaterial.End" />

    <TextView
        android:id="@+id/tvFiltersTitle"
        style="@style/ItemWrapContent"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/filters"
        android:textSize="@dimen/text_size_xl"
        app:fontFamily="@font/jost_bold"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnClose"
        style="@style/ImageButtonMaterial"
        android:contentDescription="@string/close_icon"
        android:src="@drawable/icon_close"
        app:layout_constraintBottom_toBottomOf="@id/tvFiltersTitle"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/tvFiltersTitle" />

    <TextView
        android:id="@+id/tvHintDisplayText"
        style="@style/ItemWrapContent"
        android:text="@string/setup_display_params"
        app:fontFamily="@font/jost_light"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvFiltersTitle" />

    <TextView
        android:id="@+id/tvSubgroupsTitle"
        style="@style/ItemWrapContent"
        android:layout_marginTop="@dimen/margin_s"
        android:text="@string/displaying_subgroups"
        android:textSize="@dimen/text_size_s"
        app:fontFamily="@font/jost_medium"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvHintDisplayText" />


    <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
        android:id="@+id/mstgSubgroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_xs"
        android:layout_marginEnd="@dimen/margin_s"
        app:layout_constraintTop_toBottomOf="@id/tvSubgroupsTitle"
        app:tbgChildSpacing="auto">

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltSubgroupA"
            style="@style/ImageButtonMaterial"
            android:text="@string/subgroup_a"
            app:tbgMarkerColor="@color/green_base_transparent" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltSubgroupB"
            style="@style/ImageButtonMaterial"
            android:text="@string/subgroup_b"
            app:tbgMarkerColor="@color/green_base_transparent" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltSubgroupC"
            style="@style/ImageButtonMaterial"
            android:text="@string/subgroup_c"
            app:tbgMarkerColor="@color/green_base_transparent" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltSubgroupD"
            style="@style/ImageButtonMaterial"
            android:text="@string/subgroup_d"
            app:tbgMarkerColor="@color/green_base_transparent" />

    </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

    <TextView
        android:id="@+id/tvWeekTitle"
        style="@style/TextViewOptions"
        android:text="@string/week"
        app:drawableStartCompat="@drawable/icon_filter_target"
        app:fontFamily="@font/jost_medium"
        app:layout_constraintEnd_toEndOf="@id/psvSortByWeek"
        app:layout_constraintStart_toStartOf="@id/psvSortByWeek"
        app:layout_constraintTop_toBottomOf="@id/mstgSubgroups" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/psvSortByWeek"
        style="@style/BottomSheetOptionsStyle"
        android:hint="@string/week"
        app:layout_constraintEnd_toStartOf="@id/psvSortByCourse"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tvWeekTitle"
        app:spinner_item_array="@array/week_options" />

    <TextView
        android:id="@+id/tvCourseTitle"
        style="@style/TextViewOptions"
        android:text="@string/сourse"
        app:drawableStartCompat="@drawable/icon_filter_target"
        app:fontFamily="@font/jost_medium"
        app:layout_constraintEnd_toEndOf="@id/psvSortByCourse"
        app:layout_constraintStart_toStartOf="@id/psvSortByCourse"
        app:layout_constraintTop_toBottomOf="@id/mstgSubgroups" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/psvSortByCourse"
        style="@style/BottomSheetOptionsStyle"
        android:hint="@string/сourse"
        app:layout_constraintEnd_toStartOf="@id/psvSortByGroup"
        app:layout_constraintStart_toEndOf="@id/psvSortByWeek"
        app:layout_constraintTop_toBottomOf="@id/tvWeekTitle"
        app:spinner_item_array="@array/course_options" />

    <TextView
        android:id="@+id/tvGroupTitle"
        style="@style/TextViewOptions"
        android:text="@string/group"
        app:fontFamily="@font/jost_medium"
        app:layout_constraintEnd_toEndOf="@id/psvSortByGroup"
        app:layout_constraintStart_toStartOf="@id/psvSortByGroup"
        app:layout_constraintTop_toBottomOf="@id/mstgSubgroups" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/psvSortByGroup"
        style="@style/BottomSheetOptionsStyle"
        android:hint="@string/group"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/psvSortByCourse"
        app:layout_constraintTop_toBottomOf="@id/tvWeekTitle"
        app:spinner_item_array="@array/group_options_1" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/sstgMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_s"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/psvSortByCourse"
        app:tbgChildSpacing="auto">

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltStudent"
            style="@style/LabelToggleStyle"
            android:layout_marginEnd="@dimen/margin_xs"
            android:text="@string/student_view" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/ltTeacher"
            style="@style/LabelToggleStyle"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/teacher_view" />

    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/MaterialButtonStyle"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/sstgMode" />

</androidx.constraintlayout.widget.ConstraintLayout>